# aihero

./: README.md
course/: notebook.ipynb
project/evidently-agent/: .env.example  .gitignore  pyproject.toml  requirements.txt
project/evidently-agent/app/: app.py  ingest.py  logs.py  main.py  search_agent.py  search_tools.py
project/evidently-agent/eval/: data_gen.ipynb  evaluations.ipynb
